# ems-optim-analyser

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.bat
.github/workflows/: build-executable.yml  ci.yml  release.yml
docs/: MIGRATION.md  SETUP_COMPLETE.md  architecture.md
resources/config/: IbmWatsonMLProperties.yml  UpdateProperties.yml  deployment_list.xlsx  plot_param.xlsx
resources/models/: Microgrid Optimizer V2.10 - with Tongatapu - free BESS.mod  Microgrid Optimizer V2.8 - Kergrid Stage 2.mod  Microgrid Optimizer V2.8 - Mare-XL-2.mod  Microgrid Optimizer V2.9 - VidoFleur.mod  MicrogridOptimizer 19.mod  MicrogridOptimizer 20.mod  MicrogridOptimizer V3.10 - Verberne America.mod  MicrogridOptimizer V3.9 - HPP 5.mod  MicrogridOptimizer V3.9 - HPP.mod  MicrogridOptimizerVerberne_mFRR.mod  MicrogridOptimizer_EO60.mod  MicrogridOptimizer_Forced_Powers-L-STL-GEN-283.mod  MicrogridOptimizer_Forced_Powers.mod  MicrogridOptimizer_GDS.mod  MicrogridOptimizer_GDS_new_model.mod  MicrogridOptimizer_GDS_prod_actuel.mod  MicrogridOptimizer_GDS_test_constraint.mod  MicrogridOptimizer_GES_test_aFRR.mod  MicrogridOptimizer_JEPX.mod  MicrogridOptimizer_V3.10_GP_4.mod  MicrogridOptimizer_VDB_mFRR.mod  MicrogridOptimizer_Vierpolders.mod  MicrogridOptimizer_Vierpolders_test_constraint.mod  MicrogridOptimizer_ZEE.mod  Microgrid_Optimizer_V3.9_Mopa_aFRR_V16_XL_5.mod  Microgrid_Optimizer_V4.0.5_QairMU_XL5.mod  Microgrid_Optimizer_V4.0.mod  Microgrid_Optimizer_V4.0_Equans.mod  Microgrid_Optimizer_V4.0_GP_1.mod  WML-Microgrid-Prod-Microgrid_Optimizer_V3.11_HPP_2-XL-5-L-STL-GEN-283.mod  WML-Microgrid-Prod-Microgrid_Optimizer_V3.11_HPP_2-XL-5.mod  WML-Microgrid-Prod-Microgrid_Optimizer_V3.11_HPP_3-M-5-L-STL-GEN-283.mod  WML-Microgrid-Prod-Microgrid_Optimizer_V3.11_HPP_3-M-5.mod  WML-Microgrid-Prod-Microgrid_Optimizer_V4.0.44_NL-M-5.mod
scripts/: build_executable.py  migrate_files.py
src/optim_analyser/: __init__.py  __main__.py  cli.py  config.py  errors.py  launchApp.py  models.py
src/optim_analyser/analysis/: __init__.py  analyse.py  colors.py  compare.py  display.py  subplot.py
src/optim_analyser/analysis/services/: __init__.py  comparison_service.py  display_service.py  replay_service.py
src/optim_analyser/app/: __init__.py  app.py  appCompare.py  appDisplayRun.py  appForceBehavior.py  appMenu.py  appOptimJob.py  checkUpdates.py
src/optim_analyser/ibm/: __init__.py  getJobsStatus.py  jobWMLRestClient.py  modelDeploymentWithRestClient.py  optimizationIBM.py
src/optim_analyser/optim/: __init__.py  dataframes.py  optimization.py  path.py  replay.py
tests/: conftest.py
tests/integration/: test_startup.py  test_workflows.py
tests/unit/: test_analysis.py  test_config.py  test_ibm.py  test_services.py
