[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optim-analyser"
version = "1.0.0"
description = "Optimization analysis and visualization tool for EMS microgrid operations"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Proprietary"}
authors = [
    {name = "Energy Pool", email = "dev@energypool.eu"}
]
keywords = ["optimization", "microgrid", "energy-management", "cplex", "ibm-watson"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "et-xmlfile>=2.0.0",
    "idna>=3.10",
    "narwhals>=1.24.1",
    "numpy>=2.2.2,<3.0",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.3,<3.0",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "ttkthemes>=3.2.2",
    "tzdata>=2025.1",
    "urllib3>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

build = [
    "pyinstaller>=6.12.0",
    "pyinstaller-hooks-contrib>=2025.1",
]

[project.scripts]
optim-analyser = "optim_analyser.cli:main"
optim-analyser-gui = "optim_analyser.__main__:main"

[project.urls]
Homepage = "https://github.com/energypool/ems-optim-analyser"
Documentation = "https://github.com/energypool/ems-optim-analyser/docs"
Repository = "https://github.com/energypool/ems-optim-analyser"
Issues = "https://github.com/energypool/ems-optim-analyser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
optim_analyser = ["py.typed", "resources/**/*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=optim_analyser",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

[tool.bandit.assert_used]
exclude = ["*/test_*.py"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "*.egg-info"]
per-file-ignores = [
    "__init__.py:F401",
]
